IDK what I did but solved theoverlapping

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,13 +1,13 @@
 #landingPage {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #landingImageContainer {
-  width: 100%;
+  width: 100vw;
   height: 50vh;
   background-color: black;
 }
@@ -30,6 +30,7 @@
   justify-content: center;
   align-items: center;
   border: 2px solid black;
+  /* margin-bottom: 10em; */
 }
 #followButtons {
   display: flex;
